@@ -1,3 +1,8 @@
+2005-01-06  Federico Mena Quintero  <federico@ximian.com>
+
+	* gtk/gtkfilechooserdefault.c (file_list_build_popup_menu): Add an
+	"Open _Location" item.  Fixes #148839.
+
 2005-01-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* README.in: Fix a typo.  (#163128, kentaro fukuchi)
